[package]
name = "nft_tutorial"
version = "0.1.0"
authors = [ "CryptoSnowPrince <topdirector2017@gmail.com>" ]
edition = "2018"
license = "MPL-2.0"
description = "nft-tutorial"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = "5.0.0"
concordium-cis2 = "2.0.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
